--- a/seminare/math_cafe/20170225/crystalbasismodel.tex
+++ b/seminare/math_cafe/20170225/crystalbasismodel.tex
@@ -20,6 +20,7 @@
 \usepackage[dvipdfmx]{hyperref}
 %複数行コメント
 
+
 \renewenvironment{itemize}%
 {%
    \begin{list}{\parbox{1zw}{$\bullet$}}% 見出し記号／直後の空白を調節
@@ -37,6 +38,9 @@
 }{%
    \end{list}%
 }
+
+
+
 
 
 \begin{document}
@@ -190,23 +194,24 @@ $\{ g \in M(2,\mathbb{C}) | \mathrm{Tr}g = 0 \}$
 リー群の表現はちょっと保留
 
 
-\subsection{Hopf代数}
+\section{Hopf代数}
 \label{sub:Hopf代数}
 
 - Hopf代数の定義
 - 普遍包絡環がHopf代数になっていることの証明
 
+%\section{SLの場合の量子群}
 \section{$\mathrm{SL}(2,\mathbb{C})$の場合の量子群}
-\label{sec:SL(2,\mathbb{C})}
+
 リー群$\mathrm{SL}(2,\mathbb{C})$に対し，リー環，普遍包絡環を求め，
 これを基に量子群を求める．
 
-また，量子群に対する既約表現を決定する．
+また，量子群に対する既約表現を決定し，完全可約性を示す．
 
 
 \begin{thebibliography}{99}
   \bibitem{KO} 小林俊行,大島利雄 リー群と表現 岩波書店(2005/4/6)
-  \bibitem{…}  ……
+  \bibitem{aaa}  ……
 \end{thebibliography}
 
 \end{document}
