--- a/MachineLearning/MainfoldHypothesis/MANIFOLDHYPOTHESIS.tex
+++ b/MachineLearning/MainfoldHypothesis/MANIFOLDHYPOTHESIS.tex
@@ -39,6 +39,8 @@
 \newtheorem*{rem}{Remark}
 \newtheorem{prf}{Proof}
 \newtheorem{clm}{Claim}
+\newtheorem{hyp}{HYPOTHESIS}
+\newtheorem{mtm}{Main Thoerem}
 
 %この論文紹介用定義
 \newcommand{\bh}[2]{B_{\mathcal{H}}(#1,#2)}
@@ -62,31 +64,31 @@
 
 \part{内容}
 
-\section{start}
-\label{start}
-第1回で紹介したいもの
-\begin{itemize}
-  \item 最低限の周辺知識＋記号
-  \item 前半の主定理(Thm1)と意味
-  \item Claim1の証明を含めた論文の1~3章
-\end{itemize}
+\section{論文の主題}
+\label{論文の主題}
+
 
 \subsection{論文概要}
 \label{sub:論文概要}
 
-この論文では多様体仮説が成り立っているかを確認できるアルゴリズム
-をある意味で提示している．
-数学的に示していることをざっくりとした，日本語で説明すると以下の二点である．
+最初に論文に記載されている内容を説明する．
+数学的に示していることをざっくりとした(数学的には不正確な)日本語で説明すると以下の二点である．
 \begin{itemize}
-  \item ある多様体に対して，多様体仮説が成り立つと仮定した時，実際に多様体仮説が成り立つ多様体$M$を数学的に構成できた．
+  \item 多様体仮説がある多様体に対して，成り立つと仮定する．この時，
+  実際に多様体仮説が成り立つ多様体$M$を数学的に構成できた．
   \item 上の多様体$M$を具体的に求めるアルゴリズムを構成した．
 \end{itemize}
 
-完全に勘違いしていたが，数学的な条件では，入力となるデータに関する性質を記述できていないので，多様体仮説が成り立つことは確認できない．
+完全に勘違いしていたが，(この論文の)数学的な条件では，
+入力となるデータに関する性質を記述できていないので，多様体仮説が成り立つことは確認できない．
 この論文では，多様体仮説が成り立つかはわからないが，多様体仮説が成り立つならば，
-求めたい多様体(といっていいもの)を定義し，求めるアルゴリズムを定義できたので，実際に実験してみればいいはずだと主張している．
-以下では，結果を具体的に記述するため，最低限の数学的な用語を定義する．
+求めたい多様体(といっていいもの)が定義でき，さらにそれを実際に求めるアルゴリズムを構成できたので，
+実際に実験してみればよいと主張している．
+もし数学的に多様体仮説を示すのであれば，入力データの偏りに相当する仮定が必要になる．
+また，多様体の形に依存した，クラスタリングが定義できるかもよくわかっていない．
+例えば，連結成分等でうまく定義できて欲しいものだが...
 
+結果を具体的に記述するため，最低限の数学的な用語を定義する．
 \subsection{基本的な定義}
 \label{sub:基本的な定義}
 
@@ -97,7 +99,7 @@
     \item 内積が定義できる．すなわち,以下を満たす写像$< \cdot , \cdot >: \mathcal{H} \times \mathcal{H} \to \mathbb{R}$が存在する.
       \begin{enumerate}
         \item 任意の$x_1,x_2,y \in \mathcal{H}$に対し，${<}x_1 +x_2,y{>}= {<}x_1,y{>} +{<}x_2,y{>}$
-        \item　任意の$x,y \in \mathcal{H},a \in \mathbb{R}$に対し，$<ax,y> =a<x,y>$
+        \item 任意の$x,y \in \mathcal{H},a \in \mathbb{R}$に対し，$<ax,y> =a<x,y>$
         \item 任意の$x,y \in \mathcal{H}$に対し，$<x,y>=<y,x>$
         \item 任意の$x \in \mathcal{H}$に対し，${<}x,x{>} \ge 0$であり，${<}x,x{>}=0$と$x=0$は同値である．
       \end{enumerate}
@@ -105,7 +107,7 @@
   \end{itemize}
 \end{dfn}
 \begin{rem}
-　上で定めた内積のことを正定値対象双線型形式という.
+上で定めた内積のことを正定値対象双線型形式という.
 \end{rem}
 \begin{rem}
   $x,y \in \mathcal{H}$に対し，$d(x,y):=\sqrt{{<}x-y,x-y{>}}$
@@ -118,7 +120,7 @@
  \end{enumerate}
 \end{rem}
 \begin{rem}
- 距離空間$X$が完備とは，任意のコーシー列$\{x_n\}_{n \in \mathbb{Z}_{\ge 0}}$に対し，収束先$x \in X$が存在すること．
+ 距離空間$X$が完備とは，任意のコーシー列$\{x_n\}_{n \in \mathbb{Z}_{\ge 0}}$が，ある$x \in X$に対する収束列となること．
 \end{rem}
 \begin{epl}
  $\mathbb{R}^n$は標準内積により，ヒルベルト空間になる．
@@ -126,13 +128,27 @@
 
 この論文で使われる"多様体"の定義をする．
 \begin{dfn}[reach]
-  $M$を$H$の部分集合とし．$x\in \mathcal{H}$に対し，$d(x,M)$を$\mathrm{inf}_{y \in M}d(x,y)$とする．
+  $M$を$\mathcal{H}$の部分集合とし．$x\in \mathcal{H}$に対し，$d(x,M)$を$\mathrm{inf}_{y \in M}d(x,y)$とする．
   実数$\tau$が$M$の\textbf{reach}とは,$d(x,M)< \tau$となる任意の$x$に対し，
   $y\in M$が存在し，$y$と異なる任意の$z\in M$に対し，$d(x,z) > d(x,M)=d(x,y)$となること．
 \end{dfn}
+\begin{epl}
+ 半径$r$の円周$\{(x,y) \in \mathbb{R}^2 \mid x^2+y^2=r^2 \}$のreachは$r$になる．
+\end{epl}
+\begin{rem}
+ reachの定義は初めて見た．恐らく多様体をクラスタリングするために，定義されているのだと思う．
+\end{rem}
+\begin{dfn}
+ 位相空間$X$の部分集合$Y$が\textbf{稠密}とは$Y$の閉包が$X$に一致することをいう．
+ 位相空間$M$が稠密な加算部分集合を持つ時，\textbf{可分}という．
+\end{dfn}
+\begin{epl}
+ 実数体$\mathbb{R}$に通常のユークリッド位相を定めた時，有理数体$\mathbb{Q}$は稠密になる．
+ また$\mathbb{Q}$は加算集合のため，$\mathbb{R}$は可分である．
+\end{epl}
 
 \begin{dfn}[Tangent Space]
-$H$を可分ヒルベルト空間とする。閉集合$A \subset H$と$a \in A$に対し、$Tan^0(a,A)$を
+$H$を可分ヒルベルト空間とする。閉集合$A \subset \mathcal{H}$と$a \in A$に対し、$Tan^0(a,A)$を
 $v \in H$で、任意の$\epsilon$に対し、ある$b \in A$が存在し、$0 <|a -b| < \epsilon$と、$|\frac{v}{|v|} - \frac{b-a}{|b-a|} < \epsilon$.
 を表す。
 $Tan(a,A)$を$\{x \in H| x -a \in Tan^0(a,A)\}$とする。
@@ -143,35 +159,42 @@ $Tan(a,A)$を$\{x \in H| x -a \in Tan^0(a,A)\}$とする。
    reach(A)^{-1}=\mathrm{sup}\{2|b-a|^{-2}d(b,Tan(a,A)) | a.b \in A\}
   \end{equation*}
 \end{prop}
+\begin{dfn}
+ $V \subset \mathcal{H}$が$d$次元\textbf{アフィン空間}とは，ある$a \in \mathcal{H}$が存在し，$\{ x \in \mathcal{H} \mid x + a \in V \}$が$d$次元のベクトル空間になること．
+\end{dfn}
 \begin{dfn}[$C^r$-submfd]
-ヒルベルト空間$\mathcal{H}$の閉集合$M$が$d$次元$C^r$\textbf{級部分多様体}とは，以下が成り立つことである．
-任意の$p \in M$に対し，$x \in U$となる$\mathcal{H}$の開部分集合と$C^r$級写像$\phi:U \to \mathcal{H}$で$\phi|_{U \cap M}$は中への微分同相写像であり，その像が$d$次元アフィン空間$V$(ある点$x\in \mathcal{H}$が存在し，$V-x$が$d$次元のベクトル空間になる)のインターセクションでかけるものが存在する.
+ヒルベルト空間$\mathcal{H}$の閉集合$M$は以下を満たす時，
+$d$次元$C^r$\textbf{級部分多様体}という．
+\begin{itemize}
+  \item 任意の$p \in M$に対し，$x \in U$となる$\mathcal{H}$の開部分集合と$C^r$級写像$\phi:U \to \mathcal{H}$が存在する．
+  \item $\phi|_{U \cap M}$は終域を像に制限すると微分同相写像である
+  \item $d$次元アフィン空間の族$\{ V_i \}_{i \in I}$に対し，$\phi(U \cap M)=\cap_{i \in I} V_i \cap \phi(U)$が成り立つ．
+\end{itemize}
   $B_{\mathcal{H}}:= \{ x \in \mathcal{H} \mid d(x,x) \le 1 \}$とする．
-$\gdvt$を$d$次元で体積$V$以下でreachが$\tau$以上で$B_{\mathcal{H}}$に含まれる$C^r$級多様体全体のなす集合とする．
+$\gdvt$を体積$V$以下であり，reachが$\tau$以上となる$B_{\mathcal{H}}$に含まれる$d$次元(境界のない)$C^r$級多様体全体のなす集合とする．
 
 \end{dfn}
 \begin{rem}
- 多様体は普通の数学書では上記のようには定義されない．$\mathcal{H}$を固定して考えたいがために，上記のように定義したのだと思われる．
+ 多様体は普通の数学書では上記のようには定義されない．
+ $\mathcal{H}$を固定して考えたいがために，上記のように定義したのだと思われる．
 \end{rem}
 \begin{rem}
  この論文では，後でもう一つ多様体と呼ぶものが出てくる．$C^r$級部分多様体が必ずしも後で出てくる多様体とは限らないことに注意せよ．
 \end{rem}
 
 \begin{dfn}
- $(\Omega,F,P)$が確立空間とは，$\Omega$をある集合とし，
- $F$を$\Omega$上の$\sigma$-加法族であり，$P$は非負測度であり，
- $P(\Omega)=1$となる．
+ $\Omega$を集合とする.
+ $F$を$\Omega$上の$\sigma$-加法族，
+ $\mu_P$を$F$上の非負測度で，$\mu_P(\Omega)=1$とする．
+ この時，$(\Omega,F,\mu_P)$を確立空間という．
 \end{dfn}
 \begin{dfn}
  $X:\Omega \to [-\infty,\infty]$が確立変数とは任意の$a \in [-\infty,\infty]$で，$\{x \in \Omega \mid X(x) \le a \} \in F$となること．
 \end{dfn}
 \begin{dfn}
- $X$を確立変数とした時，$F_X(x) = P(X <x)$と書ける時，確立分布関数という，
+ $X$を確立変数とした時，$P(x) = \mu_P(X <x)$と書ける時，$P$を確立分布関数という.
 \end{dfn}
 
-\begin{dfn}
- 確立分布関数とは
-\end{dfn}
 
 \subsection{多様体仮説}
 \label{sub:多様体仮説}
@@ -179,12 +202,13 @@ $\gdvt$を$d$次元で体積$V$以下でreachが$\tau$以上で$B_{\mathcal{H}}$
 可分なヒルベルト空間を$\mathcal{H}$,その単位球を$B_{\mathcal{H}}$,
 $B_{\mathcal{H}}$上の確立分布関数を$P$とする．
 \begin{equation*}
- \mathcal{L}(M,P):=\int_{x \in B_{\mathcal{H}}} d(x,M)^2\frac{dx}{dP(x)}dx.
+ \mathcal{L}(M,P):=\int_{x \in B_{\mathcal{H}}} d(x,M)^2\frac{dP(x)}{dx}dx.
 \end{equation*}
 とする．
-\begin{dfn}
-  確立分布関数$P$で,i.i.d(独立試行)が行われた時，以下が成り立つことを多様体仮説と呼ぶ．ある$M \in \mathcal{G}(d,CV,c\tau)$が存在し，$\mathcal{L}(M,P) \le C \epsilon$となる.
-\end{dfn}
+確立分布関数$P$となるi.i.d(独立試行)が行われた時，以下が成り立つことを多様体仮説と呼ぶ．
+\begin{hyp}
+  ある$M \in \mathcal{G}(d,CV,\tau/C)$が存在し，$\mathcal{L}(M,P) \le C \epsilon$となる.
+\end{hyp}
 \begin{rem}
  論文中でこれを多様体仮説と直接呼んではいないが，内容から判断して多様体仮説と呼ぶことにした．
 \end{rem}
@@ -195,8 +219,9 @@ $B_{\mathcal{H}}$上の確立分布関数を$P$とする．
 \subsection{主結果その1}
 \label{sub:主結果その1}
 
-1つめの定理を述べる．
-\begin{thm}
+この論文の1つめの主定理を述べる．
+\begin{mtm}
+\label{mth1}
  ある$r > 0$に対し、
  \begin{equation*}
   U_{\mathcal{G}(1/r)}:=CV( \frac{ 1 }{ \tau^d } + \frac{ 1 }{ (\tau r)^{d/2} } )
@@ -207,31 +232,146 @@ $B_{\mathcal{H}}$上の確立分布関数を$P$とする．
   (\frac{U_{\mathcal{G}}(1/\epsilon)}{\epsilon})) + \frac{ 1 }{ \epsilon^2 }\mathrm{log}\frac{ 1 }{ \delta }  )
  \end{equation*}
 とする。
-$s \ge s_{\mathcal{G}}(\epsilon,\delta)$とし、$x=\{ x_1,\dots,x_s\}$を確率測度$P$による独立試行により，得られた集合とする。
-$P_X$を$X$上の一様確率測度とする。(どの元が出る確率が等しい)
+$s \ge s_{\mathcal{G}}(\epsilon,\delta)$とし、$x=\{ x_1,\dots,x_s\}$を確率分布$P$による独立試行により，得られた集合とする。
+$P_X$を$X$上の一様確率分布関数とする。
 $M_{erm}$を$\mathcal{G}(d,V,\tau)$の元であって、
 \begin{equation*}
  L(M_{erm}(x),P_X) - \mathrm{inf}_{M \in \mathcal{G}(d,V,\tau)} L(M,P_X) < \frac{ \epsilon }{ 2 }
 \end{equation*}
-を満たし、以下を最初にするものとする。
+を満たし、以下を最小にするものとする。
 \begin{equation*}
  \sum_{i=1}^sd(x_i,M)^2
 \end{equation*}
 この時、
 \begin{equation*}
- \mathbb{P}[L(M_{erm}(x),P)] - \mathrm{inf}_{M \in \mathcal{G}(d,V,\tau)} L(M,P) < \epsilon > 1- \delta
+ \mathbb{P}[L(M_{erm}(x),P) - \mathrm{inf}_{M \in \mathcal{G}(d,V,\tau)} L(M,P) < \epsilon] > 1- \delta
 \end{equation*}
 となる。
-\end{thm}
-
+\end{mtm}
+\begin{rem}
+ $s$次元の直積測度で考えた時，上の条件を満たす$x$全体の集合をその測度に代入すると$1- \delta$より大きいという意味．
+\end{rem}
 \begin{rem}
  この定理が何を示しているかというと,$L(M,P)$の極小値に十分近い値を取る,多様体$M_{erm}(x)$を構成できることが言えた．$M_{erm}$は最適化問題の解として得られるので，極小値自体よりもかなり具体的になっている．
  特に，$M_{erm}$が確立を計算しなてくも求められるのがよい．基本的に$P_X$は未知であることを前提に問題と解くので，$P_X$に依存しないのは強い結果である．
 \end{rem}
 \begin{rem}
-  仮定からわかるように,$\epsilon.\delta$の値にも強く依存する．だが，これらとして何を取るべきかはまだ，わかっていない．本当は計算してみて，どのぐらい大きい$s$が必要化推測するべきだが…．
+  仮定からわかるように,$\epsilon.\delta$の値にも強く依存する．私はまだ,これらとして何を取るべきかはわかっていない．計算してみて，どのぐらい大きい$s$が必要か推測(計算)したい．
 \end{rem}
 
+\section{主定理1の証明に向けた準備}
+\label{sub:主定理の証明に向けた準備}
+主定理\ref{mth1}を示すための準備を行う．
+多様体を考察することで以下を示す．
+\begin{clm}
+  $M \in \gdvt$とし，$\Pi_x$を$\mathcal{H} \to \mathrm{Tan}(x,M)$への射影とする．
+  十分大きい(controlされた?)定数$C$に対し，
+  \begin{equation*}
+   U:= \{ y \mid |y - \Pi_xy| \le \tau/C \} \cap \{ y \mid |x - \Pi_x y| \le \tau/C \}
+  \end{equation*}
+  とする．この時，$C^{1,1}$級関数$F_{x,U}:\Pi_x(U) \to \Pi_x^{-1}(\Pi_x(0))$で以下を満たすものが存在する．
+  \begin{enumerate}
+    \item $F_{x,U}$のLipschitz constant of the gradientが$C$以下である．
+    \item $ \displaystyle
+    M \cap U = \{ y + F_{x,U}(y) \mid y \in \Pi_x(U) \} $
+  \end{enumerate}
+\end{clm}
+
+\subsection{Proof of Claim 1}
+\label{sec:Proof of CLAIM 1}
+
+$\mathcal{H}$をヒルベルト空間とする．(無限次元でもよい)
+$D$-planeを$\mathcal{H}$の$D$次元部分ベクトル空間とする．
+$DPL$で$D$-plane全体のなす空間を表す．
+$\Pi,\Pi^\prime \in DPL$に対し，直交変換(内積が不変な変換)$T: \mathcal{H} \to \mathcal{H}$
+であって，$T(\Pi)= \Pi^\prime$とする．これ全体のなす集合を$A_{\Pi,\Pi^\prime}$とする.
+この時，
+\begin{equation*}
+ \mathrm{dist} (\Pi,\Pi^\prime):= \mathrm{inf}_{T \in A_{\Pi,\Pi^\prime}} ||T -I||
+\end{equation*}
+で定める.
+$(DPL,dist)$は距離空間になる．(未確認)
+
+
+$D$-palne $\Pi$に対し，
+\begin{equation*}
+ \Psi :\bpd \to \Pi^{\perp}
+\end{equation*}
+を$C^{1,1}$級関数(定義不明)で$\Psi(0)=0$とする．
+この時，a patch of radius $r$ over $\Pi$ centered at 0とは，
+\begin{equation*}
+ \Gamma=\{ x + \Psi(x) \mid x \in \bpd \}
+\end{equation*}
+をさす．さらに
+\begin{equation*}
+ \gnd := \mathrm{sup}_{x \neq y \in \bpd} \frac{ \nabla \Psi(x) - \nabla \Psi(y)}{||x - y||}
+\end{equation*}
+とする．ここで
+$\nabla\Psi(x):\Pi \to \Pi^{\perp}$は接ベクトル空間の間の射$T_x\Pi \to T_x\Pi^{\perp}$のこと(としか考えられない).
+ただし，$\Pi \sim T_x \Pi$を使って同一視している．
+
+もし$ \nabla \Psi(0)=0$(0写像)が成り立っている場合，$\Gamma$を
+a patch of radius r tangent to $\Pi$ at its center 0という．
+
+\begin{lem}
+  $\Gamma_1$を$\Pi_1$上の半径$r_1$で中心$z_1$で$\Pi_1$に接しているpatchとする．
+  $z_2 \in \Gamma_1$で$||z_2 -z_1 || < c_0r_1$を満たすとする．
+  \begin{equation*}
+   \gnaaad \le \frac{c_0}{r_1}
+  \end{equation*}
+  とする．$\Pi_2 \in DPL$で$\mathrm{dist}(\Pi_2,\Pi_1) <c_0$とする．
+  この時，$\Pi_2$上の半径$c_1r_1$で中心$z_2$のpatch $\Gamma_2$で以下を満たすものが存在する．
+  \begin{equation*}
+   \gn{2}{0}{c_1r_1}{} \ge \frac{200c_0}{r_1}
+  \end{equation*}
+と
+\begin{equation*}
+\Gamma_2 \cap \bh{z_2}{\frac{c_1r_1}{2}} = \Gamma_1 \cap \bh{z_2}{\frac{c_1r_1}{2}}
+\end{equation*}
+\end{lem}
+\begin{proof}
+ わからん…．恐らく陰関数定理を使いたいのだろうが，条件を満たす$\Gamma$の一意性が言えないような…
+\end{proof}
+
+\begin{dfn}
+  $M \subset \mathcal{H}$が"compact imbedded D-manifold" (for short, just a "manifold")とは，以下が成り立つことである．
+\begin{itemize}
+  \item Mがcompact
+  \item 任意の$z \in M$に対し，ある$T_zM \in DPL$と，$T_zM$上の半径$r_1$,中心$z$,$z$で$T_z(M)$
+  に接するpatch$\Gamma$が存在し，
+  $M \cap B_{\mathcal{H}}(z,r_2)=\Gamma \cap B_{\mathcal{H}}(z,r_2)$となる.
+\end{itemize}
+We say that $M$ has infinitesimal reach $\rho$ if for every $\rho^{\prime} < \rho$, there is a choice of $r_1 > r_2 > 0$ such that
+for every $z \in M$ there is a patch $\Gamma$ over $T_z(M)$ of radius $r_1$, centered at $z$ and tangent to $T_z(M)$ at $z$ which has $C^{1,1}$-norm at most $1/\rho^{\prime}$
+\end{dfn}
+
+\begin{lem}[Growing Patch]
+  Let $M$ be a manifold and let $r_1,r_2$ be as in the definition of a manifold.
+Suppose $M$ has infinitesimal reach $ \ge 1$. Let $\Gamma \subset M$ be a patch of radius $r$ centered at 0, over $T_0M$. Suppose
+$r$ is less than a small enough constant $\hat{c}$ determined by $D$. Then there exists a patch $\Gamma^{+}$ of radius $r + cr_2$
+over $T_0M$, centered at 0 such that $\Gamma \subset \Gamma^{+} \subset M$
+\end{lem}
+\begin{proof}
+ $\mathcal{H}$はヒルベルト空間なので，$\mathcal{H}=T_0M \oplus T_0M^{\perp}$に直和分解する．
+ $M$が$D$次元なので，$T_0M \simeq \mathbb{R}^D$となる．
+ patch $\Gamma$を
+ $\Gamma =\{(x,\Psi(x) \mid x \in B_{\mathbb{R}^D}(0,r) \}$と書く，
+ここで,$C^{1,1}$写像$\Psi: B_{\mathbb{R}^D}(0,r) \to \mathcal{H}^{\perp}$は
+$\Psi(0)=0,\nabla\Psi(0)=0$となり，$||\Psi||_{C^{1,1}(B_{\mathbb{R}^D}(0,r))} \le C_0$となる.
+$r$を十分小さくとり，$y \in B_{\mathbb{R}^D(0,r)}$に対し，
+$|\nabla \Psi(y)| \le C_0||y|| \le C_0$とできる．この時，
+上のlemmaより(本当はきちんと条件を確認したい，
+$\Pi_1=\Pi_2$でとっているのと平行移動していること，そもそもこの取り方してるならもっと弱い補題でいけるのでは?),
+\begin{equation*}
+ \Psi_y:B_{\mathbb{R}^D}(y,c^{\prime} r_2) \to \mathcal{H}^{\perp}
+\end{equation*}
+で$||\nabla\Psi_y(z)||,||\Psi_y||_{C^{1,1}}$が有界で,
+\begin{equation*}
+ M \cap B_{\mathcal{H}}((y,\Psi(y)),c^{\prime\prime} r_2) =
+ \{ (z,\Psi_y(z)) \mid z \in B_{\mathbb{R}^D}(y,c^{\prime} r_2)\}
+ \cap B_{\mathcal{H}}((y,\Psi(y)),c^{\prime\prime} r_2)
+\end{equation*}
+\end{proof}
 
 
 \part{論文そのもの}
@@ -396,7 +536,7 @@ $M_{erm}$を$\mathcal{G}(d,V,\tau)$の元であって、
 
 \subsection{Constans}
 \label{sub:Constans}
-$D$ is a fixed integer. Constants $c,C,C\prime$ etc depend only on $D$. These symbols may denote
+$D$ is a fixed integer. Constants $c,C,C^{\prime}$ etc depend only on $D$. These symbols may denote
 different constants in different occurrences, but $D$ always stays fixed.
 
 \subsection{D-planes}
