--- a/Math/differentialgeometry/manifold.tex
+++ b/Math/differentialgeometry/manifold.tex
@@ -36,9 +36,53 @@
 
 \begin{document}
 情報幾何の理論理解を目標に多様体、バンドル、接続など、微分幾何の基礎知識を学習する。
-
+また，ドラムの定理，ホッジ分解，特性類等も興味の範囲内で調べる.
 \section{多様体の基礎概念}
 \label{sec:多様体の基礎概念}
+
+\begin{dfn}[多様体]
+$M$が$n$次元$C^r$級多様体とは,ある開被覆$\{U_i\}$と中への同相写像$\phi_i:U_i \to \mathbb{R}^n$
+が存在し,$\phi_j \circ \phi_i^{-1}:phi_i(U_i \cap U_j) \to phi_j(U_i \cap U_j)$が$C^r$級写像であること.
+\end{dfn}
+\begin{rem}
+$M$にパラコンパクト,可分,連結等も課す場合がある.
+\end{rem}
+
+幾何は自分の中で図形をイメージできるようにならないとモチベーションがわかりづらいことが多い.
+そのため,例を調べながら自分で理解していくことが重要である.
+多様体についても定義とそのイメージを記述しよう.
+多様体は曲面の一般化と言われている.
+そう思うと自分の中で気になる点は以下である．
+\begin{itemize}
+  \item 曲面内部の図形に対して,面積,長さ等平面の場合に定義できたものが定義できるか
+  \item 曲面上の微分幾何ができるか
+  \item 曲面では現れなかった問題が起きるか
+\end{itemize}
+これらについて考えていく.また多様体の定義がこれらの問題について納得の行く解になっていないと感じた場合は
+その問題点の明確化及び証明を考える.
+
+まずは微分及び積分が意味を持つように定義する必要がある.
+最初に思い浮かぶのは$\phi_i$で移した先による微分として定義することである.
+しかし,これでは$x \in U_i \cap U_j$とすると,$\phi_i,|phi_j$のどちらで移すかによって値がうまく定まらない.
+
+これを解決するためには曲面等の変換と同じく微分≒接ベクトル空間の元と解釈すればよい.
+$U_i$での表示は$U_i$のある基底によるものと理解する．
+こうするとJacobianの移り変わりによって接ベクトル空間がうまく定義できる.
+上で話したものは厳密には
+$f : M \to \mathbb{R}$に対する微分の定義となる.
+つまり$p \in M$に対し,その微分
+\begin{equation*}
+ df_p:=(\frac{\nabla f }{\nabla x_i }|_p)
+\end{equation*}
+とする.これが定義となるのは$x_i$の選び方に依存しないためである.
+
+
+変換によって変わるように見える.
+それに対応するために，
+
+\begin{dfn}[接ベクトル空間]
+
+\end{dfn}
 
 \section{ベクトルバンドル}
 \label{sec:ベクトルバンドル}
