--- a/MachineLearning/MainfoldHypothesis/MainfoldHypothesis第1回.tex
+++ b/MachineLearning/MainfoldHypothesis/MainfoldHypothesis第1回.tex
@@ -376,7 +376,7 @@ $\Pi_1=\Pi_2$でとっているのと平行移動していること,そもそも
 \end{equation*}
 \end{proof}
 
-\section{flow proof of Maint Theorem 1}
+\section{flowof proof of Main Theorem 1}
 \label{sec:証明のフロー}
 以降では,
 Main Theorem \ref{mth1}の証明の方針を述べる.
