--- a/Math/numbertheory/classfieldtheory/comolexmulitplication.tex
+++ b/Math/numbertheory/classfieldtheory/comolexmulitplication.tex
@@ -55,7 +55,7 @@
 
 
 \section{Complex Mulitiplication over $\mathbb{C}$}
-\label{sec:Complex Mulitiplication over  $\mathbbC$ }
+\label{sec:Complex Mulitiplication over  mathbbC }
 
 複素解析的な観点から楕円曲線を調べる。
 $E/\mathbb{C}$を　complex multiplicationを持つ楕円曲線とする。 complex multiplicationの定義から、$\\mathrm{End}(E) \otimes \mathbb{Q}$はある虚二次体$K$と同型となる。
@@ -63,10 +63,10 @@ $\mathrm{End}(E) \simeq R \subset \mathbb{C} $の時、$E$は$R$による(ある
 $R_K$を$K$の整数環とする。$E$が$R_K$による complex multiplicationを持つときだけに制限すると理論が非常に簡単になる。そのため、基本的には$R$を$R_K$をと仮定して議論する。一般論は志村先生の教科書を参考にせよ。
 
 楕円曲線のuniformation theoremより、任意の楕円曲線$E$はあるLattice $\Lambda \subset \mathbb{C} $が存在し、
-\begin{eqnarry*}
+\begin{align*}
   f: \mathbb{C}/ \lambda \simeq E(\mathbb{C})   \
   z \mapsto (\mathfrak{p}(z, \Lambda),\mathfrak{p}^{'}(z, \Lambda))
-\end{eqnarry*}
+\end{align*}
 となる。
 
 $\Lambda$に対応する楕円曲線を$E_{\Lambda}$と書く。$E_{\Lambda}$は以下で与えられる。
