--- a/MachineLearning/BasoMathineLearing.tex
+++ b/MachineLearning/BasoMathineLearing.tex
@@ -45,6 +45,10 @@
   \item ベイズによる最適化
   \item 確率論の基本
   \item ガウス分布,分散,フィッシャー情報行列
+  \item 機械学習の基本
+  \item NNの基本
+  \item TDE
+  \item kernel法
 \end{itemize}
 
 
@@ -56,6 +60,10 @@
 
 \subsection{実行結果}
 \label{sub:実行結果}
+
+\section{NNの基本}
+\label{sec:NNの基本}
+
 
 
 \end{document}
