--- a/seminare/CFT/CFT.tex
+++ b/seminare/CFT/CFT.tex
@@ -113,7 +113,7 @@
 
 
 \begin{document}
-  古典的な代数的整数論の理解をまとめる．
+古典的な代数的整数論の理解をまとめる．
   \begin{itemize}
     \item ガロア理論からはじめ，類体論までの基本的な話.
     \item 初等整数論とゼータ関数への話.
@@ -124,7 +124,7 @@
 
 \section{ガロア理論}
 \label{sec:ガロア理論}
-ガロア理論について簡単に記述する.
+ガロア理論を説明する.
 
 \subsubsection{体の分離拡大}
 \label{sub:体の分離拡大}
@@ -267,7 +267,7 @@ $K$を体,$L$をそのガロア拡大体とする.
 これは$G \in B$に対し，$M := L^G=\{ x \in L \mid \text{任意の}\sigma \in G \text{に対し} \sigma x = x\}$を対応させることで，
 反変圏同値となる．
 
-ガロア理論では，体とガロア群の関係はわかるが，ガロア群が具体的にどういう群かについては何も言っていない．
+ガロア理論では,体とガロア群の関係はわかるが,ガロア群が具体的にどういう群かについては何も言っていない．
 それを具体的に求めたい.特に数論の人間は代数体の絶対ガロア群を知りたい.(現在も絶対ガロア群はよくわかっていない)
 類体論は代数体や局所体のアーベル拡大体の場合にガロア群がどうなっているかを記述したものである．
 
@@ -970,7 +970,7 @@ $\Sigma_1 \Sigma_2 \Sigma_3$は$\sigma_1,\Sigma_2,\Sigma_3$の不分岐拡大体
 \end{cor}
 \begin{proof}
  $N_{L/K}U_L=U_K$となり，付値を計算すると，位数は同じ巡回群となる．
- また$L/K$のFrobeniusの不変体は$L$となり，$N_{L/K}\pi_L$は位数が$[L:K]$の元となるので，
+ また$L/K$のFrobeniusの不変体は$K$となり，$N_{L/K}\pi_L$は位数が$[L:K]$の元となるので，
  生成元が生成元へと移る．
 \end{proof}
 
